--- a/style.css
+++ b/style.css
@@ -1,44 +1,12 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-ul {
-  margin-left: 60px;
-}
-
-ul li {
-  list-style: none;
-  display: inline-block;
-  line-height: 100px;
-}
-
-ul li a {
-  display: block;
-  text-decoration: none;
-  font-size: 14px;
-  color: #1e1e1e;
-  padding: 0 20px;
-}
-
-ul li a:hover {
-  color: white;
-  background-color: #1e1e1e;
-}
-
 body {
-  background-color: #eee;
-  background-image: url("bgimage.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-nav {
-  width: 100%;
-  height: 100px;
-  background-color: white;
+  padding: 0;
+  margin: 0 auto;
 }
 
 .main {
   text-align: center;
+  background-color: #eee;
+  background-image: url("bgimage.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
