--- a/about.css
+++ b/about.css
@@ -1,23 +1,32 @@
 * {
   text-align: center;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
-.heading,
-.section2 {
+.heading {
   border: 1px solid black;
   color: white;
   background-color: rgb(33, 37, 41);
   border-radius: 10px;
+  width: 80%;
 }
 
 .section1 {
   /* border: 1px solid lightslategray; */
   background-color: #f8f9fa;
   border-radius: 10px;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   width: 50%;
+}
+
+.section2 {
+  border: 1px solid black;
+  color: white;
+  background-color: rgb(33, 37, 41);
+  border-radius: 10px;
+  width: 85%;
 }
 
 img {
@@ -27,10 +36,11 @@ img {
 .flex-container {
   display: flex;
   align-items: flex-end;
+  background-color: #f8f9fa;
+  margin-top: 20px;
 }
 
 .flex-container > div {
-  width: 100%;
   margin: 10px;
   text-align: center;
 }
@@ -40,10 +50,3 @@ img {
     max-width: 70%;
   }
 }
-
-/* 
-.flex-container {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-around;
-} */
