--- a/contact.css
+++ b/contact.css
@@ -10,49 +10,55 @@ p {
   text-align: center;
 }
 
+.col-md-6 {
+  /* rgb(33, 37, 41); */
+}
+
 .fa {
   padding: 20px;
   font-size: 30px;
-  width: 50px;
+  width: 100px;
   text-align: center;
+  /* text-align: center; */
   text-decoration: none;
+  /* background-color: rgb(0, 0, 0, 0.596); */
+  margin: 5%;
+  margin-left: 40%;
 }
 
 .fa:hover {
   opacity: 0.7;
 }
 
+.icon {
+  background-color: rgb(33, 37, 41);
+  margin-left: 40%;
+}
+
 /* Facebook */
 .fa-facebook {
-  background: #3b5998;
   color: white;
   border-radius: 10px;
+  margin-top: 20%;
 }
 
 /* LinkedIn */
 .fa-linkedin {
-  background: #007bb5;
   color: white;
   border-radius: 10px;
 }
 
 /* instagram */
 .fa-instagram {
-  background: #125688;
   color: white;
   border-radius: 10px;
 }
 
 /* google */
 .fa-google {
-  background: #dd4b39;
   color: white;
   border-radius: 10px;
 }
-
-/* .btn btn-outline-secondary {
-  padding: 10px;
-} */
 
 .i {
   text-align: center;
@@ -61,5 +67,10 @@ p {
 @media (min-width: 596px) {
   form {
     margin-left: 40%;
+  }
+
+  .fa {
+    margin-left: 40%;
+    margin-top: 5%;
   }
 }
