--- a/contact.css
+++ b/contact.css
@@ -1,14 +1,16 @@
-* {
-  margin: 0 auto;
-  padding: 0;
-}
-
 h1,
 h2,
-h4,
-p {
+h4 {
   text-align: center;
 }
+
+/* .checkbox {
+  text-align: center;
+} */
+
+/* p {
+  text-align: center;
+} */
 
 .fa {
   padding: 20px;
@@ -28,7 +30,7 @@ p {
 
 .icon {
   background-color: rgb(33, 37, 41);
-  margin-left: 40%;
+  margin-left: 30%;
 }
 
 /* Facebook */
