--- a/contact.css
+++ b/contact.css
@@ -4,62 +4,54 @@ h4 {
   text-align: center;
 }
 
-/* .checkbox {
+.checkbox {
   text-align: center;
-} */
+  margin: 0 auto;
+}
 
-/* p {
+form {
+  margin: 5%;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+p {
   text-align: center;
-} */
+}
 
 .fa {
   padding: 20px;
   font-size: 30px;
   width: 100px;
   text-align: center;
-  /* text-align: center; */
   text-decoration: none;
-  /* background-color: rgb(0, 0, 0, 0.596); */
   margin: 5%;
-  margin-left: 40%;
+  margin-left: 30%;
 }
 
 .fa:hover {
   opacity: 0.7;
 }
 
-.icon {
-  background-color: rgb(33, 37, 41);
-  margin-left: 30%;
-}
-
-/* Facebook */
 .fa-facebook {
   color: white;
   border-radius: 10px;
-  margin-top: 20%;
+  margin-top: 10%;
 }
 
-/* LinkedIn */
 .fa-linkedin {
   color: white;
   border-radius: 10px;
 }
 
-/* instagram */
 .fa-instagram {
   color: white;
   border-radius: 10px;
 }
 
-/* google */
 .fa-google {
   color: white;
   border-radius: 10px;
-}
-
-.i {
-  text-align: center;
 }
 
 @media (min-width: 596px) {
