--- a/about.css
+++ b/about.css
@@ -5,15 +5,14 @@
 }
 
 .heading {
-  border: 1px solid black;
-  color: white;
-  background-color: rgb(33, 37, 41);
+  /* border: 1px solid black; */
+  color: rgb(33, 37, 41);
+  background-color: #f8f9fa;
   border-radius: 10px;
-  width: 80%;
+  width: 40%;
 }
 
 .section1 {
-  /* border: 1px solid lightslategray; */
   background-color: #f8f9fa;
   border-radius: 10px;
   margin-top: 20px;
@@ -32,6 +31,7 @@
 img {
   max-width: 85%;
   max-height: 10%;
+  border-radius: 10px;
 }
 
 .flex-container {
