--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@ body {
   margin: 0 auto;
 }
 
-.header {
-  grid-area: header;
-}
-
 .main {
   grid-area: main;
   text-align: center;
@@ -16,18 +12,16 @@ body {
   background-size: cover;
 }
 
-.footer {
-  grid-area: footer;
-}
-
-.main img {
+#profile-pic {
   margin-top: 5%;
   border-radius: 50px;
   border: #eee;
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
   border-style: solid;
   border-color: white;
+}
+
+img a:hover {
+  opacity: 0.5;
 }
 
 .main p {
@@ -67,7 +61,4 @@ h3 {
 .column {
   flex: 33.33%;
   padding: 5px;
-}
-
-@media (min-width: 600px) {
 }
