--- a/resume.css
+++ b/resume.css
@@ -13,7 +13,7 @@
     "skills education"
     "work work"
     "work work";
-  background-color: mintcream;
+  background-color: rgb(248, 249, 250);
 }
 
 #name {
@@ -51,12 +51,12 @@ h6 {
 
 .skills {
   grid-area: skills;
-  margin-top: 11%;
+  margin-top: 2%;
 }
 
 .education {
   grid-area: education;
-  margin-top: 15%;
+  margin-top: 3%;
 }
 
 .contact {
@@ -73,16 +73,6 @@ h6 {
 .work {
   grid-area: work;
   margin-top: 5%;
-}
-
-@media (min-width: 600px) {
-  .summary {
-    margin: 5% 15%;
-  }
-
-  .education {
-    margin-top: 14%;
-  }
 }
 
 @media (min-width: 976px) {
@@ -104,15 +94,14 @@ h6 {
   }
 
   .education {
-    margin-top: 0% 10%;
+    margin-top: 0% 18%;
   }
 
   .skills {
-    margin-top: 16%;
+    margin-top: 20%;
   }
 
   .work {
-    grid-area: work;
     margin-top: 0% 50%;
   }
 }
