--- a/style.css
+++ b/style.css
@@ -1,52 +1,58 @@
 body {
   padding: 20px;
   margin: 0 auto;
+  font-family: "Noto Sans", sans-serif;
 }
 
 .main {
-  text-align: center;
-  padding-top: 10%;
+  padding-top: 15%;
   background-image: url("bgimage1.jpg");
   border-radius: 10px;
   background-size: cover;
 }
 
-#profile-pic {
+/* #profile-pic {
   margin-top: 5%;
   border-radius: 50px;
   border: #eee;
   border-style: solid;
   border-color: white;
-}
-
-.main p {
-  color: white;
-  text-align: center;
-  margin-left: 25%;
-  margin-right: 25%;
-}
+} */
 
 h3 {
-  -webkit-text-decoration-line: overline; /* Safari */
+  margin-top: 6%;
+  margin-left: 15%;
+  color: white;
+}
+
+h1 {
+  margin-left: 15%;
+  color: white;
+  padding-bottom: 30%;
+}
+
+/* h4 {
+  -webkit-text-decoration-line: overline; 
   text-decoration-line: overline;
   padding: 3%;
-}
-
-h1,
-h2,
-h3 {
+  margin-left: 15%;
   color: white;
-}
+} */
 
-.p1 {
+/* .main p {
   color: white;
-}
+  text-align: center;
+  margin-left: 20%;
+  margin-right: 20%;
+} */
 
-.row {
-  display: flex;
-}
+@media (min-width: 976px) {
+  h2 {
+    margin-top: 0%;
+    margin-left: 15%;
+  }
 
-.column {
-  flex: 33.33%;
-  padding: 5px;
+  /* .main p {
+    margin-top: 0;
+  } */
 }
