--- a/portfolio.css
+++ b/portfolio.css
@@ -5,7 +5,7 @@
   font-family: "Noto Sans", sans-serif;
 }
 
-h1 {
+/* h1 {
   border: 1px solid rgba(222, 226, 230);
   border-radius: 10px;
   background-color: rgb(33, 37, 41);
@@ -13,4 +13,10 @@ h1 {
   text-align: center;
   width: 50%;
   padding: 1%;
+} */
+
+h1 {
+  color: black;
+  /* letter-spacing: 20px; */
+  text-align: center;
 }
