--- a/about.css
+++ b/about.css
@@ -1,58 +1,118 @@
-* {
-  text-align: center;
+body {
+  padding: 20px;
   margin: 0 auto;
-  box-sizing: border-box;
-}
-
-.heading {
-  /* border: 1px solid black; */
-  color: rgb(33, 37, 41);
-  background-color: #f8f9fa;
-  border-radius: 10px;
-  width: 40%;
-}
-
-.section1 {
-  background-color: #f8f9fa;
-  border-radius: 10px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  width: 50%;
-}
-
-.section2 {
-  border: 1px solid black;
-  color: white;
-  background-color: rgb(33, 37, 41);
-  border-radius: 10px;
-  width: 85%;
-}
-
-img {
-  max-width: 85%;
-  max-height: 10%;
-  border-radius: 10px;
-}
-
-.flex-container {
-  display: block;
-  align-items: flex-end;
-  background-color: #f8f9fa;
-  margin-top: 20px;
-}
-
-.flex-container > div {
-  margin: 10px;
+  font-family: "Noto Sans", sans-serif;
   text-align: center;
 }
 
-@media (min-width: 600px) {
-  img {
-    max-width: 70%;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.3fr 1.4fr 1fr 0.7fr 0.7fr 0.7fr;
+  grid-auto-flow: row;
+  grid-gap: column;
+  grid-template-areas:
+    "title title"
+    "pic pic"
+    "info info"
+    "img1 img2"
+    "img3 img4"
+    "img5 img6";
+}
+
+.title {
+  grid-area: title;
+  margin-top: 5%;
+  text-align: center;
+}
+.pic {
+  grid-area: pic;
+  margin-left: 1%;
+  /* border-radius: 5px; */
+}
+
+.info {
+  grid-area: info;
+}
+
+.img1 {
+  grid-area: img1;
+}
+
+.img2 {
+  grid-area: img2;
+}
+
+.img3 {
+  grid-area: img3;
+}
+
+.img4 {
+  grid-area: img4;
+}
+
+.img5 {
+  grid-area: img5;
+}
+
+.img6 {
+  grid-area: img6;
+}
+
+@media (min-width: 976px) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.5fr 1.2fr 1fr 1fr 1fr;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "title title title"
+      "info pic pic"
+      "info pic pic"
+      "img1 img2 img3"
+      "img4 img5 img6";
   }
 
-  .flex-container {
-    display: flex;
-    flex-direction: row;
+  .title {
+    grid-area: title;
+    margin-top: 5%;
+  }
+
+  .info {
+    grid-area: info;
+    margin-left: 30%;
+    margin-top: 0 auto;
+  }
+
+  .pic {
+    grid-area: pic;
+    margin-bottom: 5%;
+    /* box-shadow: 5px 5px 5px gray; */
+  }
+
+  .img1 {
+    grid-area: img1;
+    border: 1px solid #f8f9fa;
+    border-radius: 10px;
+  }
+
+  .img2 {
+    grid-area: img2;
+  }
+
+  .img3 {
+    grid-area: img3;
+  }
+
+  .img4 {
+    grid-area: img4;
+  }
+
+  .img5 {
+    grid-area: img5;
+  }
+
+  .img6 {
+    grid-area: img6;
   }
 }
