--- a/style.css
+++ b/style.css
@@ -31,6 +31,23 @@ h1 {
   padding-bottom: 30%;
 }
 
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
+}
+
 /* h4 {
   -webkit-text-decoration-line: overline; 
   text-decoration-line: overline;
