--- a/about.css
+++ b/about.css
@@ -7,8 +7,8 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 0.3fr 1.4fr 1fr 0.7fr 0.7fr 0.7fr;
+  grid-template-columns: 1.2fr 1.2fr;
+  grid-template-rows: 0.2fr 1.2fr 1fr 0.6fr 0.6fr 0.6fr;
   grid-auto-flow: row;
   grid-gap: column;
   grid-template-areas:
@@ -27,12 +27,12 @@ body {
 }
 .pic {
   grid-area: pic;
-  margin-left: 1%;
   /* border-radius: 5px; */
 }
 
 .info {
   grid-area: info;
+  text-align: center;
 }
 
 .img1 {
@@ -104,6 +104,7 @@ body {
     grid-area: info;
     margin-left: 30%;
     margin-top: 0 auto;
+    margin-bottom: 5%;
   }
 
   .pic {
@@ -114,8 +115,8 @@ body {
 
   .img1 {
     grid-area: img1;
-    border: 1px solid #f8f9fa;
-    border-radius: 10px;
+    /* border: 1px double #f8f9fa;
+    border-radius: 10px; */
   }
 
   .img2 {
