--- a/about.css
+++ b/about.css
@@ -3,7 +3,7 @@ body {
   margin: 0 auto;
   font-family: "Noto Sans", sans-serif;
   text-align: center;
-  color: #003300;
+  color: black;
 }
 
 .container {
@@ -20,7 +20,6 @@ body {
 }
 
 .bg-light border roudned-3 {
-  background-color: black;
   color: white;
 }
 
