--- a/portfolio.css
+++ b/portfolio.css
@@ -18,3 +18,25 @@ h1 {
 img {
   width: 100%;
 }
+
+.card {
+  margin-bottom: 15px;
+}
+
+.btn-group {
+  align-items: flex-end;
+}
+
+@media (min-width: 576px) {
+  .card {
+    height: 400px;
+    margin-bottom: 15px;
+  }
+}
+
+@media (min-width: 976px) {
+  .card {
+    height: 405px;
+    margin-bottom: 15px;
+  }
+}
