--- a/about.css
+++ b/about.css
@@ -8,8 +8,8 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: 1.2fr 1.2fr;
-  grid-template-rows: 1.2fr 1fr 0.6fr 0.6fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr .5fr 0.5fr 0.4fr;
   grid-auto-flow: row;
   grid-gap: column;
   grid-template-areas:
@@ -22,6 +22,7 @@ body {
 .pic {
   grid-area: pic;
   /* border-radius: 5px; */
+  margin-top: 5%;
 }
 
 .info {
