--- a/contact.css
+++ b/contact.css
@@ -32,7 +32,7 @@ p {
   text-align: center;
   text-decoration: none;
   margin: 5%;
-  margin-left: 30%;
+  margin-left: 26%;
 }
 
 .fa:hover {
@@ -60,13 +60,16 @@ p {
   border-radius: 10px;
 }
 
-@media (min-width: 596px) {
-  form {
-    margin-right: 5%;
-  }
+@media (min-width: 600px) {
 
   .fa {
-    margin-left: 40%;
+    margin-left:28%;
     margin-top: 5%;
   }
 }
+  
+  @media (min-width: 900px) {
+    .fa {
+      margin-left: 42%;
+    }
+  }
